Implement basic login and jwt signing

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.159",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "aws-cdk": "2.1034.0",
     "jest": "^29.7.0",
@@ -22,7 +23,6 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.954.0",
     "aws-cdk-lib": "2.232.1",
     "constructs": "^10.0.0"
   }
