--- a/backend/lambda/package.json
+++ b/backend/lambda/package.json
@@ -2,8 +2,9 @@
     "name": "lambda",
     "version": "0.1.0",
     "dependencies": {
-        "jsonwebtoken": "^9.0.0",
         "@aws-sdk/client-dynamodb": "^3.954.0",
-        "@aws-sdk/client-secrets-manager": "^3.954.0"
+        "@aws-sdk/client-secrets-manager": "^3.954.0",
+        "@aws-sdk/client-sfn": "^3.958.0",
+        "jsonwebtoken": "^9.0.0"
     }
 }
