--- a/backend/lambda/package.json
+++ b/backend/lambda/package.json
@@ -5,6 +5,7 @@
         "@aws-sdk/client-dynamodb": "^3.954.0",
         "@aws-sdk/client-secrets-manager": "^3.954.0",
         "@aws-sdk/client-sfn": "^3.958.0",
+        "@aws-sdk/util-dynamodb": "^3.958.0",
         "jsonwebtoken": "^9.0.0"
     }
 }
