--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.962.0",
     "aws-cdk-lib": "2.232.1",
     "constructs": "^10.0.0"
   }
