--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.969.0",
     "@aws-sdk/client-ec2": "^3.962.0",
+    "@aws-sdk/client-secrets-manager": "^3.969.0",
+    "@aws-sdk/client-sfn": "^3.969.0",
+    "@aws-sdk/util-dynamodb": "^3.969.0",
     "aws-cdk-lib": "2.232.1",
     "constructs": "^10.0.0"
   }
