Add server stats script

--- a/game_server/games/_blank_server/gnaws-script.conf
+++ b/game_server/games/_blank_server/gnaws-script.conf
@@ -1,5 +1,5 @@
 SERVER_FOLDER_NAME="MyServer"
-SERVER_PORT_PROTOCOL="t"
+SERVER_PORT_PROTOCOL="tcp"
 SERVER_PORT_NUMBER=25565
 START_SERVER_CMD="./server.sh"
 STOP_SERVER_CMD="^C"
