--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
-!frontend/*.js
+!frontend/legacy/*.js
+!frontend/eslint.config.js
