--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "buildAndDeploy": "cd frontend && npm run build && cd .. && npm run build && cdk deploy",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
