--- a/game_server/games/valheim/gnaws-script.conf
+++ b/game_server/games/valheim/gnaws-script.conf
@@ -1,8 +1,9 @@
 SERVER_FOLDER_NAME="Valheim"
 APT_PACKAGES="steamcmd libatomic1 libpulse-dev libpulse0"
+MAX_INSTALL_ATTEMPT=3
 SERVER_PORT_PROTOCOL="udp"
 SERVER_PORT_NUMBER=2457
 PLAYER_COUNT_UNSUPPORTED=true
-BACKUP_DIR_TARGET="save"
 START_SERVER_CMD="./gnaws-run.sh"
 STOP_SERVER_CMD="^C"
+BACKUP_DIR_TARGET="save"
