Add Palworld server performance config

--- a/game_server/games/palworld/gnaws-script.conf
+++ b/game_server/games/palworld/gnaws-script.conf
@@ -3,6 +3,6 @@ APT_PACKAGES="steamcmd"
 MAX_INSTALL_ATTEMPT=3
 SERVER_PORT_PROTOCOL="udp"
 SERVER_PORT_NUMBER=8211
-START_SERVER_CMD="./PalServer.sh -NoAsyncLoadingThread -UseMultithreadForDS"
+START_SERVER_CMD="./PalServer.sh -useperfthreads -NoAsyncLoadingThread -UseMultithreadForDS"
 STOP_SERVER_CMD="^C"
 BACKUP_DIR_TARGET="Pal/Saved/SaveGames"
