--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "buildAndDeploy": "cd frontend && npm run build && cd .. && npm run build && cdk deploy",
+    "buildFrontend": "cd frontend && npm run build",
+    "buildAndDeploy": "npm run buildFrontend && cdk deploy",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
@@ -18,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "aws-cdk": "2.1034.0",
+    "esbuild": "^0.27.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
