--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.962.0",
+    "@aws-sdk/client-ssm": "^3.994.0",
     "aws-cdk-lib": "2.232.1",
     "constructs": "^10.0.0",
     "dotenv": "^17.2.4"
